[COLAB-947] Fix overflow for long proposal pitches

--- a/themes/climatecolab-theme/src/main/webapp/css/style/pages/_proposals.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/style/pages/_proposals.scss
@@ -235,6 +235,7 @@
   height: 78px;
   padding: 0 0 0 14px;
   border-bottom: 1px solid $lightest-grey;
+  overflow: hidden;
 }
 
 .propbox.featured {
